LFA/Projeto/geometrics-lfa-07-master/examples/geometrics_tests/semantic_errors/semantic_error_figure.geom
geometrics: main

/* Should fail -> missing 'to' at 'f2' */
add figure f3 {
    point p5 (6,0)
    line l6 p3 p3
} 
f2 